# hielen3

./: .gitignore  404.html  BACKLOG.md  CHANGELOG.md  CHANGELOG.rst  DAMODIFICARE  LICENSE  MODELLO.md  README.links  README.md  README.rst  TODO.md  api.md  index.html  parsehugapidoc.py  pyproject.toml  requirements.txt  setup.py  sitemap.xml
APIREFERENCE/: index.html
BACKLOG/: index.html
CHANGELOG/: index.html
CHANGELOG.old/: index.html
MODELLO/: index.html
TODO/: index.html
TODO_old/: index.html
api/: index.html
docs/API Reference/: actions.md  actionschemata.md  data.md  elements.md  features.md  hls.md  parameters.md  pippo.md  prototypes.md  query.md  queue.md
reference/hielen2/: index.html
reference/hielen3/: index.html
search/: search_index.json
src/: a.csv  checkka.py  chiusura_1.py  clouds  crea_cose.py  dapulirone.py  dips  estrai_threshol.py  giorgio  giorgio_  lallo.py  lello_to_delete.py  librerie  llll.py  maps  ntp.py  piiii  pippo  pippo.py  ppp  prova.json  prova_.json  results  stat.py  toolchain  tutti_gli_sghembi.py  var.tgz
src/geje/: _base.py  multi_point.py  polygon.py
src/hielen2/: __init__.py  api.py  api_data.py  api_elements.py  api_prototypes.py  api_series.py  datalink.py  datalink_json.py  datalink_prova_df.py  source.py  utils.py
src/hielen3/: __init__.py  __server__.py  cloudmanager.py  contextmanager.py  contextmanager_good.py  cosa_fare  datalink.py  datalink_bkp.py  datalink_new.py  datalink_ok.py  datalink_old.py  feature.py  feature.tgz  feature_good.py  mapmanager.py  mongofuncs2.py  serializaction.py  (+5 more)
(+494 files in other folders)
